Remove table headers, add disabled buttons

--- a/window/style/scss-style.scss
+++ b/window/style/scss-style.scss
@@ -95,6 +95,11 @@ body{
     color: white;
 }
 
+.table>tbody>tr>td {
+
+    border-top: 0px;
+}
+
 .modal-dialog {
     width: 1000px;
     margin: 30px auto;
