--- a/window/templates/attackSelector.html
+++ b/window/templates/attackSelector.html
@@ -1,7 +1,7 @@
 <form class="form-horizontal">
     <fieldset>
         <div class="form-group">
-            <label class="col-md-4 control-label">SQL Injection</label>
+            <label class="col-md-4 control-label">Numbers</label>
             <div class="col-md-4">
                 <select class="form-control" ng-model="sqlText">
                     <option ng-repeat="injectText in sqlInjectionOptions" value="{{injectText}}">
@@ -13,7 +13,7 @@
         </div>
 
         <div class="form-group">
-            <label class="col-md-4 control-label">XSS</label>
+            <label class="col-md-4 control-label">Strings</label>
             <div class="col-md-4">
                 <select class="form-control" ng-model="xssText">
                     <option ng-repeat="injectText in xssOptions" value="{{injectText}}">
@@ -23,5 +23,6 @@
             </div>
             <button type="button" class="btn btn-default" ng-click="setAttack(field, xssText)">Add</button>
         </div>
+
     </fieldset>
 </form>
