--- a/window/templates/requests.html
+++ b/window/templates/requests.html
@@ -27,7 +27,7 @@
                     </tbody>
                 </table>
                 <div class="btn-toolbar" role="toolbar">
-                    <button type="button" class="btn btn-default" ng-click="retryBatch(requestList)">Retry Batch</button>
+                    <button ng-disabled="requestList.length == 0" type="button" class="btn btn-default" ng-click="retryBatch(requestList)">Retry Batch</button>
                     <button type="button" class="btn btn-danger" ng-click="stop()">STOP</button>
                 </div>
             </div>
