cleaning up templates; add extra response field

--- a/style/style.css
+++ b/style/style.css
@@ -110,4 +110,7 @@ body {
   background-color: #2574A9;
   border: 0px; }
 
+.input-group {
+  width: 80%; }
+
 /*# sourceMappingURL=style.css.map */
