--- a/templates/history.html
+++ b/templates/history.html
@@ -28,7 +28,8 @@
                     </tbody>
                 </table>
                 <div class="btn-toolbar" role="toolbar">
-                    <button type="button" class="btn btn-default" ng-click="clearHistory()">Clear</button>
+                    <button type="button" class="btn btn-danger" ng-click="clearHistory()">Clear</button>
+                    <button type="button" class="btn btn-primary" ng-click="showMore(historyList.length)">Show More</button>
                 </div>
             </div>
         </div>
