--- a/templates/requests.html
+++ b/templates/requests.html
@@ -26,7 +26,7 @@
                             <td><a ng-click="viewResult(request)">{{ request.data }}</a></td>
                             <td>{{ request.status }}</td>
                             <td>{{ request.text }}</td>
-                            <td><a>See more</a></td>
+                            <td><a ng-click="viewResult(request)">See more</a></td>
                         </tr>
                     </tbody>
                 </table>
