--- a/templates/attackSelector.html
+++ b/templates/attackSelector.html
@@ -24,5 +24,17 @@
             <button type="button" class="btn btn-default" ng-click="setAttack(field, xssText)">Add</button>
         </div>
 
+        <div class="form-group">
+            <label class="col-md-4 control-label">Dates</label>
+            <div class="col-md-4">
+                <select class="form-control" ng-model="xssText">
+                    <option ng-repeat="injectText in xssOptions" value="{{injectText}}">
+                        {{injectText}}   
+                    </option>
+                </select>
+            </div>
+            <button type="button" class="btn btn-default" ng-click="setAttack(field, xssText)">Add</button>
+        </div>
+
     </fieldset>
 </form>
