--- a/templates/main.html
+++ b/templates/main.html
@@ -45,7 +45,7 @@
                     </tbody>
                 </table>
                 <div class="btn-toolbar" role="toolbar">
-                    <button type="button" class="btn btn-default" ng-click="addParameter(headerList)">Add Value</button>
+                    <button type="button" class="btn btn-primary" ng-click="addParameter(headerList)">Add Value</button>
                 </div>
             </div>
         </div>
@@ -80,9 +80,9 @@
                 </table>
                 <div class="btn-toolbar" role="toolbar">
                     <div class="pull-left">
-                        <button type="button" class="btn btn-default" ng-click="getParamsFromUrl(urlInput, paramList)">Get Params</button>
+                        <button type="button" class="btn btn-primary" ng-click="getParamsFromUrl(urlInput, paramList)">Get Params</button>
                         <button type="button" class="btn btn-default" ng-click="addParameter(paramList)">Add Parameter</button>
-                        <button type="button" class="btn btn-default" ng-click="randomizeValues(paramList)">Random Data</button>
+                        <button type="button" class="btn btn-warning" ng-click="randomizeValues(paramList)">Random Data</button>
                     </div>
                     <div class="pull-right">
                         <button type="button" class="btn btn-primary" ng-click="addRequest(urlInput, paramList, method, headerList, requestBody)">Add to Batch</button>
@@ -109,7 +109,7 @@
                 <div id="bodyEditor" ng-model="requestBody" ui-ace="{onLoad: aceLoaded}"></div>
                 <div class="btn-toolbar" role="toolbar">
                     <div class="pull-left">
-                        <button type="button" class="btn btn-default" ng-click="randomizeBody()">Randomize Data</button>
+                        <button type="button" class="btn btn-warning" ng-click="randomizeBody()">Randomize Data</button>
                     </div>
                     <div class="pull-right">
                         <button type="button" class="btn btn-primary" ng-click="addRequest(urlInput, paramList, method, headerList, requestBody)">Add to Batch</button>
@@ -123,44 +123,40 @@
         <div class="panel panel-default">
             <div class="panel-heading">Batch</div>
             <div class="panel-body">
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th class="col-xs-1">Method</th>
-                            <th class="col-xs-9">URL</th>
-                            <th class="col-xs-1">Action</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr ng-if="urlBatch.length > 0" ng-repeat="request in urlBatch track by $index">
-                            <td>
-                                {{ request.method }}
-                            </td>
-                            <td>
-                                {{ request.url }}
-                            </td>
-                            <td>
-                                <a ng-click="removeItem(urlBatch, $index)">Remove</a>
-                            </td>
-                        </tr>
-                        <tr ng-if="urlBatch.length == 0">
-                            <td>
-                            </td>
-                            <td>
-                                No Data
-                            </td>
-                            <td>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
+                <div class="container" ng-if="urlBatch.length <= 0">
+                    <h4>No requests have been batched, add requests to batch above.</h4>      
+                </div>
+                <section ng-if="urlBatch.length > 0">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th class="col-xs-1">Method</th>
+                                <th class="col-xs-9">URL</th>
+                                <th class="col-xs-1">Action</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr ng-repeat="request in urlBatch track by $index">
+                                <td>
+                                    {{ request.method }}
+                                </td>
+                                <td>
+                                    {{ request.url }}
+                                </td>
+                                <td>
+                                    <a ng-click="removeItem(urlBatch, $index)">Remove</a>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </section>
                 <div class="tableToolbarBottom">
                     <form class="form-inline">
                         <div class="form-group">
                             <label for="delay">Delay: </label>
                             <input id="delay" type="number" class="form-control" step="1000" ng-model="delay" />
                         </div>
-                        <button ng-disabled="urlBatch.length == 0" type="button" class="btn btn-primary" ng-click="startFuzzing(delay)">Start Fuzzing</button>
+                        <button ng-disabled="urlBatch.length == 0" type="button" class="btn btn-primary" ng-click="startFuzzing(delay)">Execute</button>
                         <div class="pull-right">
                             <button ng-disabled="urlBatch.length == 0" type="button" class="btn btn-danger" ng-click="emptyBatch()">Empty Batch</button>
                         </div>
