--- a/templates/history.html
+++ b/templates/history.html
@@ -6,7 +6,7 @@
             <div class="panel-heading">History</div>
             <div class="panel-body">
                 <div class="container" ng-if="historyList.length <= 0">
-                    <h4>You have not yet made any requests.</h4>      
+                    <h4>You have not yet made any requests, <a href="#">return home</a> to begin.</h4>      
                 </div>
                 <section ng-if="historyList.length > 0">
                     <table class="table">
