Change button style

--- a/templates/main.html
+++ b/templates/main.html
@@ -45,7 +45,7 @@
                     </tbody>
                 </table>
                 <div class="btn-toolbar" role="toolbar">
-                    <button type="button" class="btn btn-primary" ng-click="addParameter(headerList)">Add Value</button>
+                    <button type="button" class="btn btn-default" ng-click="addParameter(headerList)">Add Value</button>
                 </div>
             </div>
         </div>
@@ -80,7 +80,7 @@
                 </table>
                 <div class="btn-toolbar" role="toolbar">
                     <div class="pull-left">
-                        <button type="button" class="btn btn-primary" ng-click="getParamsFromUrl(urlInput, paramList)">Get Params</button>
+                        <button type="button" class="btn btn-default" ng-click="getParamsFromUrl(urlInput, paramList)">Get Params</button>
                         <button type="button" class="btn btn-default" ng-click="addParameter(paramList)">Add Parameter</button>
                         <button type="button" class="btn btn-warning" ng-click="randomizeValues(paramList)">Random Data</button>
                     </div>
