--- a/style/style.css
+++ b/style/style.css
@@ -126,4 +126,8 @@ body {
 .input-group {
   width: 80%; }
 
+.iframe {
+  width: 100%;
+  height: 500px; }
+
 /*# sourceMappingURL=style.css.map */
