--- a/templates/requests.html
+++ b/templates/requests.html
@@ -22,20 +22,18 @@
                             <tr>
                                 <th class="col-xs-1">Method</th>
                                 <th class="col-xs-5">Request URL</th>
-                                <th class="col-xs-2">Data</th>
+                                <th class="col-xs-3">Data</th>
                                 <th class="col-xs-1">Status</th>
                                 <th class="col-xs-2">Text</th>
-                                <th class="col-xs-1">Action</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr ng-repeat="request in requestList track by $index">
                                 <td>{{ request.method }}</td>
-                                <td>{{ request.url }}</td>
-                                <td><a ng-click="viewResult(request)">{{ request.data }}</a></td>
+                                <td><a ng-click="viewResult(request)">{{ request.url }}</a></td>
+                                <td>{{ request.data }}</td>
                                 <td>{{ request.status }}</td>
                                 <td>{{ request.text }}</td>
-                                <td><a ng-click="viewResult(request)">See more</a></td>
                             </tr>
                         </tbody>
                     </table>
