--- a/templates/history.html
+++ b/templates/history.html
@@ -17,17 +17,15 @@
                                 <th class="col-xs-2">Data</th>
                                 <th class="col-xs-1">Status</th>
                                 <th class="col-xs-2">Text</th>
-                                <th class="col-xs-1">Action</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr ng-repeat="request in historyList track by $index">
                                 <td>{{ request.method }}</td>
-                                <td>{{ request.url }}</td>
-                                <td><a ng-click="viewResult(request)">{{ request.data }}</a></td>
+                                <td><a ng-click="viewResult(request)">{{ request.url }}</a></td>
+                                <td>{{ request.data }}</td>
                                 <td>{{ request.status }}</td>
                                 <td>{{ request.text }}</td>
-                                <td><a>See more</a></td>
                             </tr>
                         </tbody>
                     </table>
